--- a/cover-letter.org
+++ b/cover-letter.org
@@ -84,11 +84,11 @@
 * Header                                                             :ignore:
 
 ** Photo & Tagline :ignore:
-#+begin_export latex
-\name{Harrison Pielke-Lombardo}
-\photoR{2.8cm}{Harrison_2015s.jpg}
-\tagline{PhD Researcher}
-#+end_export
+   #+begin_export latex
+   \name{Harrison Pielke-Lombardo}
+   \photoR{2.8cm}{20220815_110341.jpg}
+   \tagline{PhD Researcher}
+   #+end_export
 
 ** Personal Info :ignore:
 #+begin_export latex
